# idea-distiller

./: .env.example  .gitignore  CLAUDE.md  OPERATIONS.md  config.yaml  pyproject.toml
.claude/: settings.local.json
prompts/: idea_formula.yaml  strategic_dna.yaml  summarize.yaml  translate.yaml
scripts/: archive_job.py  migrate_awards.py  migrate_methods.py  migrate_to_subfolders.py  reclassify_functional.py  test_prompt.py  vault_status.py
src/: config.py  main.py
src/export/: index.py  markdown.py
src/jobs/: manager.py
src/llm/: anthropic_provider.py  idea_formula.py  models.py  openai_provider.py  processor.py  provider.py  strategic_dna.py  translator.py
src/obsidian/: index.py  reader.py  writer.py
src/scraper/: auth.py  cannes.py  engine.py  healthcheck.py  models.py  parser.py  setup.py
src/storage/: database.py  files.py
src/web/: routes.py
static/: style.css
templates/: base.html  campaign_detail.html  campaigns.html  dashboard.html  job_detail.html  prompt_editor.html
