[project]
name = "idea-distillery"
version = "0.1.0"
description = "Scrape, analyze, and explore award-winning ad campaigns with LLM + Obsidian"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "playwright>=1.49.0",
    "anthropic>=0.42.0",
    "openai>=1.58.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
    "python-frontmatter>=1.1.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
